# rust-trend

./: Cargo.toml
examples/: filter.rs  region_interest.rs  related_queries.rs  related_topics.rs  search_interest.rs  select_keyword.rs  simple.rs
src/: client.rs  cookie.rs  error.rs  keywords.rs  lang.rs  lib.rs  property.rs  region_interest.rs  related_queries.rs  related_topics.rs  request_handler.rs  search_interest.rs  utils.rs
src/enums/: mod.rs
