[package]
name = "rtrend"
version = "0.1.7"
edition = "2024"
authors = ["shadawck"]
description = "Unofficial API for interacting with Google Trend"
readme = "README.md"
repository = "https://github.com/shadawck/rust-trend"
homepage = "https://github.com/shadawck/rust-trend"
license = "MIT OR Apache-2.0"
keywords = ["google_trend", "trend", "google", "api", "web"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
strum = "0.27"
strum_macros = "0.27"
reqwest = { version = "0.12.22", default-features = false, features = [
    "cookies",
    "blocking",
    "rustls-tls",
] }
thiserror = "2.0.14"

[profile.release]
lto = true
opt-level = 3
panic = "unwind"
